k8s-atifacts/bps/wso2bps-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"wso2bps-deployment","namespace":"apim-demo"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"wso2bps-deployment"}},"template":{"metadata":{"labels":{"app":"wso2bps-deployment"}},"spec":{"containers":[{"image":"dushaniw/wso2ei6.5.0-demo","imagePullPolicy":"Always","name":"wso2bps","ports":[{"containerPort":9445,"protocol":"TCP"},{"containerPort":9765,"protocol":"TCP"},{"containerPort":4000,"protocol":"TC [...]
  creationTimestamp: "2021-06-01T06:44:46Z"
  generation: 8
  name: wso2bps-deployment
  namespace: apim-demo
  resourceVersion: "65798252"
  uid: 572f46ca-ced8-435a-9b5e-5e2b0eb63e07
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wso2bps-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wso2bps-deployment
    spec:
      containers:
      - image: dushaniw/wso2ei6.5.0-demo
        imagePullPolicy: Always
        name: wso2bps
        ports:
        - containerPort: 9445
          protocol: TCP
        - containerPort: 9765
          protocol: TCP
        - containerPort: 4000
          protocol: TCP
        resources: {}
        securityContext:
          runAsUser: 802
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/wso2carbon/wso2-artifact-volume/wso2/business-process/repository/resources/security
          name: wso2bps-truststore-cm
        - mountPath: /home/wso2carbon/wso2-config-volume/wso2/business-process/bin
          name: wso2bps-serversh-cm
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: wso2am-pattern-1-svc-account
      serviceAccountName: wso2am-pattern-1-svc-account
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: wso2bps-trustore-conf
        name: wso2bps-truststore-cm
      - configMap:
          defaultMode: 420
          name: wso2bps-serversh-conf
        name: wso2bps-serversh-cm
