k8s-atifacts/bps/wso2bps-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"wso2bps-service","namespace":"apim-demo"},"spec":{"ports":[{"name":"servlet-https","port":9445,"protocol":"TCP"},{"name":"servlet-http","port":9765,"protocol":"TCP"}],"selector":{"app":"wso2bps-deployment"},"type":"ClusterIP"}}
  creationTimestamp: "2021-06-01T07:05:03Z"
  name: wso2bps-service
  namespace: apim-demo
  resourceVersion: "614618"
  uid: 686747fb-04ed-4fac-a73a-90474af2ad40
spec:
  clusterIP: 10.8.13.200
  clusterIPs:
  - 10.8.13.200
  ports:
  - name: servlet-https
    port: 9445
    protocol: TCP
    targetPort: 9445
  - name: servlet-http
    port: 9765
    protocol: TCP
    targetPort: 9765
  selector:
    app: wso2bps-deployment
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
